--- a/my-profile.html
+++ b/my-profile.html
@@ -2,12 +2,15 @@
 <html lang="es">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="node_modules/sweetalert2/dist/sweetalert2.min.css">
+
+
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -27,7 +30,7 @@
 </head>
 
 <body onload="cargarInicio()">
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark p-1" style="background-color:#000; position: relative">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark navbar-black p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,8 +40,8 @@
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
             <div class="zoom"> 
-              <a class="" href="index.html">
-                <img src="img/logo-dark.png" style="height: 40px">
+              <a href="index.html">
+                <img src="img/logo-dark.png" style="height: 40px" alt="inicio">
               </a>
             </div>
           </li>
@@ -57,18 +60,18 @@
                 <input class="zoom form-control me-2 col" id="searches" onkeyup="busca()" placeholder="Buscar" aria-label="Search">
               </div> 
                 <span class="col row " id="search-addon">
-                <button class="zoom btn col row" id="search" style="align-items: center;" type="submit"> <i class="fas fa-search"></i></button>
+                <div class="zoom btn col row align-items-center" id="search" type="submit"> <i class="fas fa-search"></i></div>
             </div>
           </li>
             
-            <div class="row" data-bs-toggle="dropdown" style="margin-top: 0,5%;">
+            <div class="row mt-1" data-bs-toggle="dropdown">
               <div class="col-1 zoom" id="picture"></div>
-              <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
+              <div id="usuarioMg" value="1" class="col-10 mt-4"></div>
             </div>
 
             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
               <div id="usuarioLg">
-                <li class="usuario"style="margin-left: 1em;" id="usuario"></li> 
+                <li class="usuario m-2" id="usuario"></li> 
               </div>
 
               <li>
@@ -77,7 +80,7 @@
 
               <li>
                 <a class="btn btn-dark dropdown-item" href="my-profile.html">
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 448 512">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 448 512">
                     <path d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0S96 57.3 96 128s57.3 128 128 128zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/>                      
                   </svg> Mi perfil
                 </a>
@@ -85,7 +88,7 @@
 
               <li>
                 <a class="btn btn-dark dropdown-item" href="cart.html">
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                  <svg xmlns="http://www.w3.org/2000/svg"  width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 16 16">
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                   </svg> Mi carrito<span id="miCarrito"></span>
                 </a>
@@ -93,7 +96,7 @@
 
               <li>
                 <a class="btn dropdown-item" onclick="salirUsuario()" >        
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 576 512">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 576 512">
                     <path d="M534.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L434.7 224 224 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM192 96c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-53 0-96 43-96 96l0 256c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"/>         
                   </svg>  Cerrar sesión
                 </a>
@@ -107,16 +110,21 @@
   <main id="main">
     <div class="container mt-3">
       <h2 class="text-center">Perfil</h2>
-      <div class="row">
+      <form class="row needs-validation" novalidate id="form">
         <div class="col-lg-3">
-          <div class="mt-5" id="fotoPerfil">
+          <div class="mt-5" id="imgPerfil">
             <li class="text-center" type="button" aria-expanded="false" id="menuImg">
-              <div id="image">
-                <svg xmlns="http://www.w3.org/2000/svg" style="color:gray; margin: 1px" width="150" height="150" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-              </svg>
-
+              <div id="image" class="cont-img-perfil rounded-circle mx-auto">
+                <div id="img">
+                <svg xmlns="http://www.w3.org/2000/svg" style="color:gray; margin: 1px" width="170" height="170" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                </svg>
+                </div>
+                <div class="overlay" style="border-radius: 50%;">
+                  <div for="inputFileToLoad" class="text btn">Seleccionar Imagen</div>
+                  <input class="text" id="inputFileToLoad" style="opacity: 0" type="file" placeholder="seleccionar imagen" alt="seleccionar imagen" onchange="encodeImageFileAsURL();" />
+                </div>
               </div>
             </li>
           </div>
@@ -125,25 +133,32 @@
           <div class="row g-3">
             <div class="col m-4">
               <label class="mt-4 m-2">Nombre</label>
-              <input type="text" class="form-control " placeholder="Nombre" aria-label="Nombre" id="name">
+              <input type="text" class="form-control " placeholder="Nombre" aria-label="Nombre" id="name" required>
               <label class="mt-4 m-2">Apellido</label>
-              <input type="text" class="form-control" placeholder="Apellido" aria-label=" Apellido" id="lastName">
+              <input type="text" class="form-control" placeholder="Apellido" aria-label=" Apellido" id="lastName" required>
               <label class="mt-5 m-2">Email</label>
-              <input type="email" class="form-control" placeholder="ejemplo@email.com" aria-label=" Email" id="email">
+              <input type="email" class="form-control" placeholder="ejemplo@email.com" aria-label=" Email" id="email" required>
             </div>
       
             <div class="col m-4">
               <label class="mt-4 m-2">Segundo nombre</label>
-              <input type="text" class="form-control" placeholder="Segundo Nombre" aria-label="Segundo Nombre">
+              <input type="text" class="form-control" placeholder="Segundo Nombre" aria-label="Segundo Nombre" id="secondName">
               <label class="mt-4 m-2">Segundo apellido</label>
-              <input type="text" class="form-control" placeholder="Segundo Apellido" aria-label="Segundo Apellido">
+              <input type="text" class="form-control" placeholder="Segundo Apellido" aria-label="Segundo Apellido" id="secondLastName">
               <label class="mt-5 m-2">Teléfono de contacto</label>
-              <input type="text" class="form-control" placeholder="0900 0000" aria-label="Teléfono de contacto">
-
+              <input type="text" class="form-control" placeholder="0900 0000" aria-label="Teléfono de contacto" id="numberPhone">
             </div>
+
+            <div class="row d-grid">
+              <div class="col-3 text-end"> 
+                <button type="submit" class="zoom btn col-lg-12 button-black">
+                  <h5><b>Guardar</b></h5>
+                </button>
+              </div>
+          </div>
           </div>
         </div>
-      </div>
+      </form>
     </div>
   </main>
 
@@ -158,7 +173,7 @@
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
+      <p>Este sitio forma parte de <a ref="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
         2022</p>
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
@@ -166,10 +181,11 @@
   
 
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/my-profile.js"></script>
   <script src="js/search.js"></script>
   
-</body> 
+</body>
 
 </html>
