--- a/product-info.html
+++ b/product-info.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>eMercado - Todo lo que busques está aquí</title>
 
@@ -50,7 +50,7 @@
 </head>
 
 <body onload="cargarInicio()">
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark p-1" style="background-color:#000; position: relative">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark navbar-black p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -60,8 +60,8 @@
         <ul class="navbar-nav w-100 justify-content-between">
           <li class="nav-item">
             <div class="zoom"> 
-              <a class="" href="index.html">
-                <img src="img/logo-dark.png" style="height: 40px">
+              <a href="index.html">
+                <img src="img/logo-dark.png" style="height: 40px" alt="Inicio">
               </a>
             </div>
           </li>
@@ -80,18 +80,18 @@
                 <input class="zoom form-control me-2 col" id="searches" onkeyup="busca()" placeholder="Buscar" aria-label="Search">
               </div> 
                 <span class="col row " id="search-addon">
-                <button class="zoom btn col row" id="search" style="align-items: center;" type="submit"> <i class="fas fa-search"></i></button>
+                <div class="zoom btn col row align-items-center" id="search" type="submit"> <i class="fas fa-search"></i></div>
             </div>
           </li>
             
-          <div class="row" data-bs-toggle="dropdown" style="margin-top: 0,5%;">
+          <div class="row mt-1" data-bs-toggle="dropdown">
             <div class="col-1 zoom" id="picture"></div>
-            <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
+            <div id="usuarioMg" value="1" class="col-10 mt-4"></div>
           </div>
 
           <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
             <div id="usuarioLg">
-              <li class="usuario"style="margin-left: 1em;" id="usuario"></li> 
+              <li class="usuario m-2" id="usuario"></li> 
             </div>
 
             <li>
@@ -100,7 +100,7 @@
 
             <li>
               <a class="btn btn-dark dropdown-item" href="my-profile.html">
-                <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 448 512">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 448 512">
                   <path d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0S96 57.3 96 128s57.3 128 128 128zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/>                      
                 </svg> Mi perfil
               </a>
@@ -108,7 +108,7 @@
 
             <li>
               <a class="btn btn-dark dropdown-item" href="cart.html">
-                <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 16 16">
                   <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                 </svg> Mi carrito<span id="miCarrito"></span>
               </a>
@@ -116,7 +116,7 @@
 
             <li>
               <a class="btn dropdown-item" onclick="salirUsuario()" >        
-                <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 576 512">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 576 512">
                   <path d="M534.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L434.7 224 224 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM192 96c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-53 0-96 43-96 96l0 256c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"/>         
                 </svg>  Cerrar sesión
               </a>
@@ -154,7 +154,7 @@
               <div id="dato"></div>
                 <div class="input-group input-number-group">
                   <p> Cantidad: <p>
-                  <input id="cant" class="input-number" type="number" value="1" min="1" max="1000" style="margin-left: 10px;height: 30px; width: 45px;">
+                  <input id="cant" class="input-number text-center" type="number" value="1" min="1" max="1000" style="margin-left: 10px;height: 30px; width: 45px;" alt="cantidad" placeholder="cantidad">
                 </div> <br>
 
                 <div class="text-center">
@@ -165,7 +165,7 @@
                       </svg>  Añadir al carrito
                     </button>
 
-                    <a href="" style="background-color:black; color:white" class="zoom btn">
+                    <a href="" class="zoom btn button-black">
                       <b>Comprar</b>
                     </a>
                   </div>
@@ -184,13 +184,13 @@
                   <div class="row my-4">
                     <div class="container">
                       <label for="Item" class="form-label"><h4>Comentar</h4></label>
-                      <input type="text" class="form-control"  style="height:70px" id="item"><br>
+                      <input type="text" class="form-control"  style="height:70px" id="item" alt="escribe un comentario" placeholder="escribe un comentario" ><br>
                       <div class="d-grid raw">
                         <div class="col">
                           <h3>
                             <form id="calif">
                               <p class="clasificacion">
-                                <a href="" class="zoom btn btn-dark" id="agregar" style="background-color:black; color:white; margin-left: 2rem;" class="btn"><b>Publicar</b></a>
+                                <a href="" class="zoom btn btn-dark button-black ml-1" id="agregar" alt="Publicar comentario"><b>Publicar</b></a>
                                 <input  id="radio1" type="radio" name="estrellas" value="5">
                                 <label for="radio1">★</label>
                                 <input id="radio2" type="radio" name="estrellas" value="4">
@@ -258,7 +258,7 @@
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
+      <p>Este sitio forma parte de <a ref="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
         2022</p>
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
