--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li class="nav-item">
             <div> 
               <a href="index.html">
-              <img src="img/logo-dark.png" style="height: 40px">
+              <img src="img/logo-dark.png" style="height: 40px" alt="inicio">
               </a>
             </div>
           </li>
@@ -49,18 +49,18 @@
                 <input class="searchEffectInit zoom form-control me-2 col" id="searches" onkeyup="busquedaIndex()" placeholder="Buscar" aria-label="Search">
               </div> 
                 <span class="col row " id="search-addon">
-                <button class="zoom btn col row" id="search" style="align-items: center;" type="submit"> <i class="fas fa-search"></i></button>
+                <div class="zoom btn col row align-items-center" id="search" type="submit"> <i class="fas fa-search"></i></div>
             </div>
           </li>
 
-            <div class="row" data-bs-toggle="dropdown" style="margin-top: 0,5%;">
+            <div class="row mt-1" data-bs-toggle="dropdown">
               <div class="col-1" id="picture"></div>
-              <div id="usuarioMg" value="1" style="margin-top: 2%;" class="col-10"></div>
+              <div id="usuarioMg" value="1" class="col-10 mt-4"></div>
             </div>
 
             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
               <div id="usuarioLg">
-                <li class="usuario btn"style="margin-left: 1em;" id="usuario"></li> 
+                <li class="usuario btn m-2" id="usuario"></li> 
               </div>
 
               <li>
@@ -69,7 +69,7 @@
 
               <li>
                 <a class="btn btn-dark dropdown-item" href="my-profile.html">
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 448 512">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 448 512">
                     <path d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0S96 57.3 96 128s57.3 128 128 128zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/>                      
                   </svg> Mi perfil
                 </a>
@@ -77,7 +77,7 @@
 
               <li>
                 <a class="btn btn-dark dropdown-item" href="cart.html">
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 16 16">
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                   </svg> Mi carrito
                 </a>
@@ -85,7 +85,7 @@
 
               <li>
                 <a class="btn dropdown-item" onclick="salirUsuario()" >        
-                  <svg xmlns="http://www.w3.org/2000/svg" style="color: white; margin: 0px" width="25" height="25" fill="currentColor" class="bi bi-cart3" viewBox="0 0 576 512">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart3 icono" viewBox="0 0 576 512">
                     <path d="M534.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L434.7 224 224 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l210.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128zM192 96c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-53 0-96 43-96 96l0 256c0 53 43 96 96 96l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l64 0z"/>         
                   </svg>  Cerrar sesión
                 </a>
@@ -97,7 +97,7 @@
   </nav>
 
   <main id="main">
-      <img src="img/publicidad4.jpg" style="width: -webkit-fill-available;">
+      <img src="img/publicidad4.jpg" style="width: -webkit-fill-available;" alt="banner e-mercado">
       <div class="album py-5 bg-light">
         <div class="container">
 
@@ -156,7 +156,7 @@
 
           <div class="carousel-item ">
             <img src="img/publicidad1.jpg" class="img-fluid d-block w-100 imgc " alt="...">
-            <div style=" text-align: left;" class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-block text-left">
               <h1 style="font-size: 52px">Nuevo</h1>
               <h2>Peugeot 208</h2>
               <button class="btn btn-warning" style="margin-left: 30px;" id="Peugeot208"><strong>Ver producto</strong></button>
@@ -165,17 +165,17 @@
 
           <div class="carousel-item">
             <img src="img/publicidad2.jpg" class="img-fluid d-block w-100 imgc" alt="...">
-            <div style=" text-align: right" class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-block text-right">
               <h1>La mejor</h1>
               <h1 style="font-size: 70px; margin-top: -30px;"><strong>BMX</strong></h1>
-              <button id="BMX" style="background-color:black; color: white;" class="btn success"><h6> <strong> VER PRODUCTO </strong> </h6></button>
+              <button id="BMX" class="btn success button-black"><h6> <strong> VER PRODUCTO </strong> </h6></button>
             </div>
           </div>
 
           <div class="carousel-item">
             <img src="img/publicidad3.jpg" class="img-fluid d-block w-100 imgc" alt="...">
-            <div style=" text-align: left" class="carousel-caption d-none d-md-block">
-              <button id="PS5" style="background-color:black; color: white;" class="btn success"><h6> Mas info</h6></button>
+            <div class="carousel-caption d-none d-md-block text-left">
+              <button id="PS5" class="btn success button-black"><h6> Mas info</h6></button>
             </div>
           </div>
         </div>
@@ -201,7 +201,7 @@
       <p class="float-end">
         <a href="#">Volver arriba</a>
       </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
+      <p>Este sitio forma parte de <a ref="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
         2022</p>
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
